--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.11",
     "axios": "^1.7.2",
     "json-server": "^0.17.4",
     "react": "^18.3.1",
